--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
       <article>
         <section class="image-gallery">
           <div class="column">
-            <img src="img1.jpg" alt="" />
+            <img src="images/img1.jpg" alt="" />
           </div>
           <div class="column">
-            <img src="img2.jpg" alt="" />
+            <img src="images/img2.jpg" alt="" />
           </div>
           <div class="column">
-            <img src="img3.jpg" alt="" />
+            <img src="images/img3.jpg" alt="" />
           </div>
         </section>
       </article>
