Added a contact form

--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
             <div class="info-card">
               <h2>for you and your family</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Eligendi, quisquam.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Excepturi, perspiciatis?
               </p>
               <button>Read More</button>
             </div>
             <div class="info-card">
               <h2>for your business</h2>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat
-                quisquam maxime vero et laborum?
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Ducimus, animi.
               </p>
               <button>Read More</button>
             </div>
@@ -67,7 +67,7 @@
               <h2>for your future</h2>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quaerat, animi.
+                Repellat, doloribus.
               </p>
               <button>Read More</button>
             </div>
@@ -136,13 +136,55 @@
           <p><b>you're in good hands</b></p>
         </section>
       </article>
+      <article>
+        <section class="contact">
+          <div class="block-1">
+            <h6>Ready to talk?</h6>
+            <h1>Contact Us</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis ut omnis excepturi sint consequuntur alias laborum. Aut
+              vero incidunt accusantium numquam nisi corrupti quam assumenda
+              illo, fuga debitis maiores sunt sequi rerum deleniti praesentium
+              doloremque nam a amet mollitia. Quas.
+            </p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim
+              quasi cumque sapiente, ex tempora perferendis error voluptatum,
+              dicta provident eveniet non? Incidunt deleniti maxime molestias at
+              deserunt, neque laboriosam nihil.
+            </p>
+          </div>
+          <div class="block-2">
+            <form action="#">
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Enter your name"
+                autocomplete="off"
+                required
+              />
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Enter a valid email address"
+                autocomplete="off"
+                required
+              />
+              <textarea
+                id="message"
+                name="message"
+                rows="4"
+                placeholder="Enter your message"
+                required
+              ></textarea>
+              <button type="submit" id="button" name="button">SUBMIT</button>
+            </form>
+          </div>
+        </section>
+      </article>
     </main>
-    <section>
-      <footer>
-        <p>
-          Site by<a href="https://linktr.ee/arinzemmanuel">Arinze Emmanuel</a>
-        </p>
-      </footer>
-    </section>
   </body>
 </html>
